--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
     "ngx-currency": "^2.5.2",
+    "ngx-mask": "^11.1.4",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.15.0",
